--- a/二维码+生成/ScanTest/ScanTest/Info.plist
+++ b/二维码+生成/ScanTest/ScanTest/Info.plist
@@ -16,6 +16,17 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
+    <key>NSCameraUsageDescription</key>
+    <string>杉德宝需要您的同意,才能访问相机</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>杉德宝需要您的同意,才能始终访问位置</string>
+    <key>NSLocationUsageDescription</key>
+    <string>杉德宝需要您的同意,才能访问位置</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>杉德宝需要您的同意,才能在使用期间访问位置</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>杉德宝需要您的同意,才能访问相册</string>
+
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
